# jornada-de-dados-aula06-bootcamp-python

./: README.md  main.py  pyproject.toml
