[project]
name = "aula-6"
version = "0.1.0"
description = ""
authors = [
    {name = "JadesonBruno",email = "jadesonbruno.a@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "flake8 (>=7.1.2,<8.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
format = "isort main.py && black main.py && flake8 main.py"
